# HAJouleBoxCore

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adapters/example/: __init__.py  adapter.py
admin/: README.md
dashboards/lovelace/: example.yaml
dashboards/node-red/: example.json
docs/: spec.md  vision_and_roadmap.md
hajouleboxcore/: __init__.py
hajouleboxcore/schema/: __init__.py  validator.py
tests/: conftest.py
tests/schema/: __init__.py  test_validator.py
tests/unit/: test_example_adapter.py
